# sqs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  USAGE.md  dist-workspace.toml  flake.nix  release.toml
.github/workflows/: ci.yml  release.yml
examples/seed/: abcd1001.md  efgh2002.md  ijkl3003.md  lists.yaml  mnop4004.md  qrst5005.md  uvwx6006.md
scripts/: release.sh
src/: lib.rs  main.rs  ordering.rs
src/adapter/: mod.rs
src/adapters/: mod.rs
src/adapters/markdown_todolists/: frontmatter.rs  identity.rs  io.rs  mod.rs
src/app/: app_error.rs  mod.rs  operations.rs
src/cache/: mod.rs
src/cli/: args.rs  fuzzy.rs  handlers.rs
src/cli/commands/: add.rs  delete.rs  doctor.rs  edit.rs  find.rs  helpers.rs  init.rs  list.rs  mod.rs  move_cmd.rs  renormalize.rs  show.rs
src/io/: input.rs  output.rs
src/storage/: config.rs  doctor.rs  editor.rs  id_state.rs  mod.rs
src/tui/: actions.rs  app_state.rs  event.rs  mod.rs  ui.rs
src/tui/widgets/: add_form.rs  add_sublist.rs  detail.rs  mod.rs  sidebar.rs  status_bar.rs  tag_picker.rs  tags.rs  task_list.rs
tests/: cli_smoke.rs  regression.rs
