[package]
name = "sqs"
version = "0.3.1"
edition = "2024"
description = "Reorder lists from the terminal"
repository = "https://github.com/dodgog/sqs"
homepage = "https://github.com/dodgog/sqs"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.12", default-features = false }
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.29"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
shell-words = "1"
thiserror = "2"
toml = "1.0"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
